--- a/NESI/styles.css
+++ b/NESI/styles.css
@@ -28,33 +28,33 @@ nav > a{
 
 li > a{
   text-decoration: none;
-  color: white;
+  color: whitesmoke;
   padding: 0.2rem;
   border-radius: 2px;
   border: 1px solid grey;
   font-family: 'Open sans';
-  font-size: 0.7rem;
+  font-size: 1rem;
 }
 
 main{
   box-sizing: border-box;
-  background-color: white;
+  background-color: whitesmoke;
 }
 
 main > header{
   padding: 5rem 1rem 3rem;
   background: rgb(3, 3, 32);
   font-size: 1.6rem;
-  font-weight: 900;
+  font-weight: 700;
   color: ghostwhite;
   text-shadow: 2px 2px 5px black;
   box-shadow: 0 2px 5px black;
-  font-family: 'Corben', cursive
+  font-family: 'Open Sans', cursive
 
 }
 
 main > header > span{
-  font-size: 0.6rem;
+  font-size: 1.2rem;
 }
 
 main > header > button{
@@ -76,22 +76,20 @@ main > section > article{
   padding: .5rem;
   font-family: 'Raleway';
   line-height: 1.5rem;
-  font-size: .8rem;
+  font-size: 1rem;
 
 }
 
 article{
   font-family: 'Raleway';
   line-height: 1.5rem;
-  font-size: .8rem;
+  font-size: 1rem;
 }
 
 section > header{
-  /* margin-bottom: 1rem; */
   font-weight: 800;
   background-color: rgb(3, 3, 32);
   padding: .5rem;
-  /* text-align: center; */
 }
 
 section > header > span{
